# maya-voice-ai

./: .gitignore  AGENT_ARCHITECTURE.md  AGENT_FLOW_AND_IMPROVEMENTS.md  DEPLOY.md  PROMPT_OPTIMIZATION_PLAN.md  README.md  SELF_HOSTING.md  agent.py  agent_neha.py  bala-key-pair-mumbai-server.pem  check_s3_upload.py  check_trunk.py  everhope_store.py  flow.py  knowledge_base.txt  livekit.toml  make_call.py  make_outbound_call.py  make_outbound_call_plivo.py  maya-prompt-single.py  maya-prompt.py  neha-prompt.py  outbound_config.py  pyproject.toml  requirements.txt
tasks/: maya_flow.py
